# gen_coap_service

./: CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  _config.yml  overview.md  setup.cfg  setup.py
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  gen_coap_service_bug_report.md  gen_coap_service_feature_request.md
.github/workflows/: gen_coap_service_docker_checker.yml  gen_coap_service_package.yml  gen_coap_service_package_checker.yml  gen_coap_service_py_checker.yml  gen_coap_service_python2_build.yml  gen_coap_service_python2_publish.yml  gen_coap_service_python3_build.yml  gen_coap_service_python3_publish.yml  gen_coap_service_python_checker.yml  gen_coap_service_toc.yml  gen_coap_service_triage.yml  gen_coap_service_triage_label.yml
docs/source/: conf.py  gen_coap_service.pro.read_template.rst  gen_coap_service.pro.rst  gen_coap_service.pro.write_template.rst  index.rst  modules.rst
gen_coap_service/: __init__.py
gen_coap_service/conf/: gen_coap_service.cfg  gen_coap_service.logo  project.yaml
gen_coap_service/conf/template/: .editorconfig  template_coapthon.yaml  template_libcoap.yaml  template_node_coap.yaml  template_rpi_pico_coap.yaml
gen_coap_service/conf/template/coapthon/: basic_resources.template  coap_client.template  coap_server.template
gen_coap_service/conf/template/coapthon/basic/: .editorconfig
gen_coap_service/conf/template/libcoap/coap_client/: README.template  (+1 more)
gen_coap_service/conf/template/node_coap/: client.template  server.template
gen_coap_service/pro/: __init__.py  gen_pro.py  read_template.py  write_template.py
gen_coap_service/run/: gen_coap_service_run.py
python-tool/conf/: gen_coap_service.cfg
tests/: .coverage  gen_coap_service  gen_coap_service_coverage.json  gen_coap_service_coverage.xml  gen_coap_service_setup_test.py  gen_copa_service_test.py  read_template_test.py  run_coverage.sh  write_template_test.py
tests/coap_client/: Makefile.am  autogen.sh  configure.ac
tests/coap_client/src/: Makefile.am  print_verbose.c
tests/coap_server/: Makefile.am  README.md
tests/coap_server/src/: Makefile.am  get_date.c  server_api.h
(+31 files in other folders)
